[package]
name = "kuecard-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["image", "canvas", "svg", "wayland", "advanced"] }
image = "0.25.9"
kuecard-backend = { version = "0.1.0", path = "../kuecard-backend" }
kutamun = "0.1.5"
lru = "0.16.3"
resvg = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.149"
vector-x = "0.1.3"
